--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
             <p>Moc, energia, endorfina<br/>
             Miłość, na każdym polu rodzina<br/>
             Palę tylko, co w sercu kiełkuje<br/>
-            Afirmuję, owocuję</p><br/>
+            Afirmuję, owocuję</p>
             <p>Po tym poznasz mnie i moich ludzi<br/>
             Mówię Ci, nam to nigdy się nie znudzi<br/>
             Bang! Od Oslo do Bombaju, leć na tym haju!<br/>
             Łap ten flow, łap naturalny power i go!<br/>
-            Zapylaj rap, płać pan radochą, obdzielać świat radź</p><br/>
-            <p>Baw się, tańcz, skacz</p><br/>
+            Zapylaj rap, płać pan radochą, obdzielać świat radź</p>
+            <p>Baw się, tańcz, skacz</p>
             <p>Łap tę energię, która wydobywa się z klat<br/>
             Sieje ład very much, na ten dopalacz z czakr bacz<br/>
-            Baw się, tańcz, skacz</p><br/>
+            Baw się, tańcz, skacz</p>
             <p>Łap ją<br/>
-            Łap ją</p><br/>
+            Łap ją</p>
             <p>Sto pro love man, strachu null tam<br/>
             Dodaje werwy i rozmachu nam<br/>
             Serducho hot jak reaktor<br/>
